- fixing minor issue - adding media module
