# docs/swagger.json
@@ -70,6 +70,61 @@
                 }
             }
         },
+        "/media": {
+            "post": {
+                "description": "TODO",
+                "consumes": [
+                    "image/jpeg"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "media"
+                ],
+                "summary": "upload media",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.MediaResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/media/{id}": {
+            "get": {
+                "description": "TODO",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "image/jpeg"
+                ],
+                "tags": [
+                    "media"
+                ],
+                "summary": "download media",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id media",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/notes": {
             "get": {
                 "description": "TODO",
@@ -280,6 +335,14 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "model.MediaResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
