# internal/app/model/media.go
@@ -1,0 +1,5 @@
+package model
+
+type MediaResponse struct {
+	Id int `json:"id"`
+}
