# internal/server/router.go
@@ -5,6 +5,7 @@ import (
 	"github.com/go-playground/validator/v10"
 	"github.com/jmoiron/sqlx"
 	"github.com/labstack/echo/v4"
+	middleware2 "github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
 	_ "refactory/notes/docs"
 	"refactory/notes/internal/app/handler"
@@ -17,6 +18,7 @@ import (
 type handlerModule struct {
 	user  handler.UserHandler
 	notes handler.NotesHandler
+	media handler.MediaHandler
 }
 
 // @title Go Blog API
@@ -42,6 +44,10 @@ func NewRouter(validate *validator.Validate, db *sqlx.DB, cache redis.Client, en
 	notes.PUT("/:id", module.notes.EditNotes)
 	notes.DELETE("/:id", module.notes.DeleteNotes)
 
+	media := api.Group("/media", middleware.Claim(), middleware.Auth)
+	media.POST("", module.media.UploadMedia, middleware2.BodyLimit("10M"))
+	media.GET("/:id", module.media.DownloadMedia)
+
 	admin := api.Group("/admin", middleware.Claim(), middleware.Auth, authenticationMiddleware.Enforce())
 	admin.PUT("/notes/:id", module.notes.ReActiveNotes)
 
@@ -61,5 +67,10 @@ func getModule(db *sqlx.DB, cache redis.Client, enforcer *casbin.Enforcer) handl
 	notesService := service.NewNotesService(notesRepo)
 	notesHandler := handler.NewNotesHandler(notesService)
 
-	return handlerModule{user: userHandler, notes: notesHandler}
+	// media module
+	mediaRepo := repository.NewMediaRepository(db)
+	mediaService := service.NewMediaService(mediaRepo)
+	mediaHandler := handler.NewMediaHandler(mediaService)
+
+	return handlerModule{user: userHandler, notes: notesHandler, media: mediaHandler}
 }
